Ajustes a carrusel de proyectos. Bug en light/dark mode

--- a/styles.css
+++ b/styles.css
@@ -313,6 +313,7 @@ figure img {
 
 
 /* Slider Styles */
+/* General styling for the slider */
 .slider-container {
     position: relative;
     width: 100%;
@@ -327,44 +328,50 @@ figure img {
 
 .project-slide {
     min-width: 100%;
-    display: none;
-    flex-direction: column; /* Cambiar a columna para que el contenido se apile verticalmente */
+    display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
+    text-align: center;
+    padding: 2rem;
 }
-
-.project-slide.active {
-    display: flex; /* Mantener flex para que funcione la disposición en columna */
-}
-
-.project-slide h3, .project-slide p {
-    text-align: center; /* Asegura que el texto esté centrado */
-}
-
 
 .project-img-container {
     width: 100%;
-    max-height: 400px; /* Ajustar según la imagen más grande */
-    height: 400px; /* Fijar la altura máxima */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    overflow: hidden; /* Para manejar las imágenes que sean más grandes */
-    margin-bottom: 1rem; /* Añadir un margen inferior para el espacio entre la imagen y el título */
+    max-width: 600px;
+    margin-bottom: 1rem;
 }
 
 .project-img-container img {
-    max-width: 100%;
-    max-height: 100%;
-    width: auto;
+    width: 100%;
     height: auto;
-    object-fit: cover;
+    border-radius: 10px;
 }
 
+.carousel-dots {
+    text-align: center;
+    /* padding: 1rem 0; */
+}
+
+.carousel-dots .dot {
+    display: inline-block;
+    width: 15px;
+    height: 15px;
+    margin: 0 5px;
+    background-color: #bbb;
+    border-radius: 50%;
+    cursor: pointer;
+    transition: background-color 0.3s, transform 0.3s;
+}
+
+.carousel-dots .dot.active {
+    background-color: #717171;
+    transform: scale(1.2);
+}
 
 button.prev, button.next {
     position: absolute;
-    top: 250px;
+    top: 50%;
     transform: translateY(-50%);
     width: 40px;
     height: 40px;
@@ -386,6 +393,7 @@ button.prev {
 button.next {
     right: 10px;
 }
+
 
 /* Contact Form */
 #contact {
@@ -559,6 +567,7 @@ button.prev, button.next {
 
 .project-slide p{
     height: 75px;
+    width: 90%;
 }
 
 /* .contact-info {
@@ -723,9 +732,17 @@ body.dark-theme footer {
         padding: 22px !important;
         font-size: 1.5rem !important;
     }
-    
 
-    
+    .project-slide {
+        padding: 0;
+    }
+
+    .carousel-dots {
+        padding: 1rem 0;
+    }
+
+    section {
+        padding: 2rem;
 }
 
 @media (min-width: 1024px) {
